few overflows fixed

--- a/public/directive/co-chat/co-chat.less
+++ b/public/directive/co-chat/co-chat.less
@@ -16,7 +16,7 @@
 }
 
 .co-chat-body {
-    height: 250px;
+    height: 200px;
     overflow-y: auto;
     padding: 0px;
 }
