--- a/public/directive/co-transactions/co-transactions.less
+++ b/public/directive/co-transactions/co-transactions.less
@@ -18,6 +18,8 @@
 
 .co-transactions-panel-body {
     padding: 0px;
+    height: 200px;
+    overflow-y: auto;
 }
 
 .co-transactions-item {
