--- a/public/partial/leftbar/leftbar.less
+++ b/public/partial/leftbar/leftbar.less
@@ -35,4 +35,5 @@ html, body {
 
 .tipping-background {
     background-color: #212121;
+    overflow: auto;
 }
